--- a/nft-preview-card-component/style.css
+++ b/nft-preview-card-component/style.css
@@ -18,9 +18,35 @@ margin: 0;padding: 0;box-sizing: border-box;
     max-width: 100%;
     border-radius: 5px;
     margin-bottom: 10px;
+    cursor: pointer;
+    
 }
-
-
+.main-image{
+    position: relative;
+}
+.main-image div {
+    position: absolute;
+    top: 0;
+    background-color: hsl(178, 100%, 50%,35%);
+    width: 100%;
+    height: 95%;
+    z-index: 900;
+    border-radius: 5px;
+    cursor: pointer;
+    opacity: 0;
+    transition: opacity 1.2s ease-in-out;
+    
+}
+.main-image div:hover{
+    opacity: 1;
+} 
+.main-image div img{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    width: 2.1rem;
+}
 
 
 
@@ -85,6 +111,10 @@ li{
 h1,span{
     color: var(--White);
     font-weight: 600;
+    cursor: pointer;
+}
+h1:hover, span:hover{
+    color: var(--Cyan);
 }
 
 p{
